fix(footer) connect footer to main content on tablet-up viewport

--- a/src/wp-content/themes/grossartig/scss/footer.scss
+++ b/src/wp-content/themes/grossartig/scss/footer.scss
@@ -1,10 +1,15 @@
 @import "_colors";
 @import "_fonts";
+@import "_mixins";
 
 .footer {
   margin-top: 30px;
   padding: 20px;
   background-color: $background-inverted;
+
+  @include tablet-up {
+    margin-top: 0;
+  }
 
   * {
     color: $primary-color-inverted;
